# ChangeLog for app-i18n/nkf
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/nkf/ChangeLog,v 1.24 2005/05/12 19:00:56 gmsoft Exp $

  12 May 2005; Guy Martin <gmsoft@gentoo.org> nkf-2.0.5-r1.ebuild:
  Stable on hppa.

*nkf-2.0.5-r1 (20 Apr 2005)

  20 Apr 2005; Masatomo Nakano <nakano@gentoo.org> +files/nkf-python.patch,
  +nkf-2.0.5-r1.ebuild:
  Added python support. Thanks to Atzm Watanabe <sitosito@p.chan.ne.jp>.

*nkf-2.0.5 (11 Apr 2005)

  11 Apr 2005; MATSUU Takuto <matsuu@gentoo.org> +nkf-2.0.5.ebuild:
  Version bumped.

  23 Nov 2004; Akinori Hattori <hattya@gentoo.org> nkf-2.0.4.ebuild:
  stable on ia64.

  05 Oct 2004; Akinori Hattori <hattya@gentoo.org> nkf-2.0.4.ebuild:
  add ~ia64.

  29 Jun 2004; Tom Gall <tgall@gentoo.org> nkf-2.0.4.ebuild:
  stable on ppc64, bug #55297

  01 Jun 2004; Aron Griffis <agriffis@gentoo.org> nkf-2.0.2-r1.ebuild,
  nkf-2.0.4.ebuild:
  Fix use invocation

  17 Apr 2004; Masatomo Nakano <nakano@gentoo.org> nkf-2.0.2-r1.ebuild:
  Fixed ebuild(syntax).

  05 Mar 2004; Masatomo Nakano <nakano@gentoo.org> nkf-2.0.3.ebuild,
  nkf-2.0.4.ebuild, files/nkf-1.92-msg00025.patch:
  Marked as stable.

*nkf-2.0.4 (04 Jan 2004)

  06 Jan 2004; MATSUU Takuto <matsuu@gentoo.org> nkf-2.0.4.ebuild:
  Added ~amd64 to KEYWORDS.

  04 Jan 2004; Masatomo Nakano <nakano@gentoo.org> nkf-1.92.ebuild,
  nkf-2.0.2.ebuild, nkf-2.0.4.ebuild:
  Version bump. And clean up old versions.

*nkf-2.0.3 (11 Oct 2003)

  11 Oct 2003; Masatomo Nakano <nakano@gentoo.org> nkf-2.0.3.ebuild:
  Version bump.

*nkf-2.0.2-r1 (01 Jul 2003)

  09 Jul 2003; Masatomo Nakano <nakano@gentoo.org> nkf-2.0.2-r1.ebuild:
  Marked as stable.

  01 Jul 2003; Masatomo Nakano <nakano@gentoo.org> nkf-2.0.2-r1.ebuild:
  Modified character code of man/ja/man1/nkf.1.

*nkf-2.0.2 (04 Apr 2003)

  30 Sep 2003; Mamoru KOMACHI <usata@gentoo.org> nkf-1.92.ebuild,
  nkf-2.0.2.ebuild:
  Marked as stable for ppc, sparc and alpha
