@@ -1,9 +1,7 @@
-MD5 8f7d73361ac61caca74a1c690f06d064 nkf-2.0.2-r1.ebuild 1020
 MD5 58635946353f1daf92d2214210bf43f0 nkf-2.0.4.ebuild 1026
-MD5 dafc994315cf9c7f09ce68c3919aa7f7 ChangeLog 2633
+MD5 9c3be02246db033d952921ffe797bd72 nkf-2.0.5-r1.ebuild 1271
+MD5 8e089155eb1a8f7a2becad3e9a50e75f ChangeLog 2782
 MD5 e92a48548554c80cf90e18df17ff6a82 metadata.xml 156
-MD5 32c50a40da826af70b648be043bdfd63 nkf-2.0.5-r1.ebuild 1269
-MD5 846425777c3e9f5dcb205262a1548d7a files/digest-nkf-2.0.4 58
-MD5 9cb8e05b1ef22ec8e3e5e7ad852e0f9c files/digest-nkf-2.0.2-r1 57
-MD5 36914cd105ffe822ba5703b3c521be30 files/digest-nkf-2.0.5-r1 58
 MD5 7051b70711c1c06f04b58b13d41437ee files/nkf-python.patch 5459
+MD5 846425777c3e9f5dcb205262a1548d7a files/digest-nkf-2.0.4 58
+MD5 36914cd105ffe822ba5703b3c521be30 files/digest-nkf-2.0.5-r1 58
