@@ -1,6 +1,11 @@
 # ChangeLog for app-i18n/nkf
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/nkf/ChangeLog,v 1.24 2005/05/12 19:00:56 gmsoft Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/nkf/ChangeLog,v 1.25 2005/07/31 00:10:41 matsuu Exp $
+
+  31 Jul 2005; MATSUU Takuto <matsuu@gentoo.org> -nkf-2.0.2-r1.ebuild,
+  nkf-2.0.5-r1.ebuild:
+  Stable on amd64, sh and x86.
+  Removed old version.
 
   12 May 2005; Guy Martin <gmsoft@gentoo.org> nkf-2.0.5-r1.ebuild:
   Stable on hppa.
